--- a/fenna-files/references.bib
+++ b/fenna-files/references.bib
@@ -600,3 +600,10 @@
   booktitle={Talk at the th Poznan Linguistic Meeting},
   year={2013}
 }
+
+@book{vries1993,
+  title={Forms and functions in Kombai, an Awyu language of Irian Jaya},
+  author={Vries, Lourens de},
+  year={1993},
+  publisher={Dept. of Linguistics, Research School of Pacific Studies, The Australian National University}
+}
