--- a/committee.tex
+++ b/committee.tex
@@ -178,15 +178,9 @@ The external head is not always an exact copy of the head inside of the relative
  pig carry-go.3\tsc{pl}.\tsc{nf} thing our-\tsc{tr}-pig-\tsc{pred}\\
  `The pig they took away, is ours.' \flushfill{Kombai, \pgcitealt[77]{vries1993}}
 
-So, we have the head. Translating this to headless relatives, there is no overt NP, so we only see the relative pronoun. The
+So, we have the external head, which is a subset of whatever this is in the relative clause. Translating this to headless relatives, there is no overt NP, so we only see the relative pronoun. What features are in there? What is there to be copied? \tsc{rel}, phi features, and d/wh.
 
-But, are there also some features that we can never copy, any restrictions? This copy is the portion of the nominal extended projection c-commanded by the RC. Therefore, it does not have D and no wh?
-
-
-
-
-
-
+Can we copy it all, or are there also some features that we can never copy, any restrictions? The copy is the portion of the nominal extended projection c-commanded by the RC. Therefore, it does not have D and no wh?
 
 And what about the external head, does it need to remain the copy that I made it, or can other things be added to it?
 
