--- a/thesis.tex
+++ b/thesis.tex
@@ -4,10 +4,6 @@
 \addbibresource{fenna-files/references.bib}
 \usepackage{fenna-files/abbreviations}
 
-\title{Case competition in headless relatives}
-\author{Fenna Bergsma}
-\date{\today}
-
 \begin{document}
 
 \bookmarksetup{startatroot}
@@ -15,7 +11,38 @@
 \frontmatter
 
 \begin{titlingpage}
-  \maketitle
+
+\center
+\Large
+
+CASE COMPETITION IN HEADLESS RELATIVES\\
+
+\vspace{4em}
+
+Inauguraldissertation\\
+\vspace{1em}
+zur Erlangung des Grades eines Doktors der Philosophie\\
+\vspace{1em}
+im Fachbereich Neuere Philologien\\
+\vspace{1em}
+der Johann Wolfgang Goethe-Universität\\
+\vspace{1em}
+zu Frankfurt am Main\\
+
+\vspace{5em}
+
+vorgelegt von\\
+\vspace{1em}
+Fenna Bergsma\\
+\vspace{1em}
+aus\\
+\vspace{1em}
+Boarnsterhim, Die Niederlande\\
+
+\vspace{3em}
+
+2020
+
 \end{titlingpage}
 
 \clearpage
